--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "symfony/dom-crawler": "^5.0",
         "symfony/filesystem": "^5.0",
         "moontoast/math": "^1.1",
-        "ramsey/uuid": "^3.9"
+        "ramsey/uuid": "^3.9",
+        "voku/portable-ascii": "^1.4"
     },
     "autoload": {
         "files": [
