--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,10 @@
         "ext-mbstring": "If you want to use Bladezero\\Support\\Str in your application."
     },
     "require": {
-        "tightenco/collect": "^6.16",
-        "symfony/finder": "^5.0"
+		"php": "^7.3|^8.0",
+        "tightenco/collect": "^8.81",
+		"league/commonmark": "^1.3|^2.0.2",
+        "symfony/finder": "^5.4"
     },
     "require-dev": {
         "doctrine/inflector": "^1.3",
@@ -31,9 +33,8 @@
         "symfony/css-selector": "^5.0",
         "symfony/dom-crawler": "^5.0",
         "symfony/filesystem": "^5.0",
-        "moontoast/math": "^1.1",
-        "ramsey/uuid": "^3.9",
-        "voku/portable-ascii": "^1.4"
+        "ramsey/uuid": "^4.2.2",
+        "voku/portable-ascii": "^1.6"
     },
     "autoload": {
         "files": [
