--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "ext-mbstring": "If you want to use Bladezero\\Support\\Str in your application."
     },
     "require": {
-		"php": "^7.3|^8.0",
+		"php": "^7.4|^8.0",
         "tightenco/collect": "^8.81",
 		"league/commonmark": "^1.3|^2.0.2",
         "symfony/finder": "^5.4"
@@ -27,7 +27,7 @@
     "require-dev": {
         "doctrine/inflector": "^1.3",
         "mockery/mockery": "^1.2.3",
-        "phpunit/phpunit": "^8.3",
+        "phpunit/phpunit": "^8.5.19|^9.5.8",
         "symfony/console": "^5.0",
         "php-curl-class/php-curl-class": "^8.6",
         "symfony/css-selector": "^5.0",
