--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require": {
 		"php": "^7.4|^8.0",
-        "tightenco/collect": "^8.81",
+        "illuminate/collections": "8.83.27",
 		"league/commonmark": "^1.3|^2.0.2",
         "symfony/finder": "^5.4"
     },
@@ -29,7 +29,7 @@
         "mockery/mockery": "^1.2.3",
         "phpunit/phpunit": "^8.5.19|^9.5.8",
         "symfony/console": "^5.0",
-        "php-curl-class/php-curl-class": "^8.6",
+        "php-curl-class/php-curl-class": "^9.19",
         "symfony/css-selector": "^5.0",
         "symfony/dom-crawler": "^5.0",
         "symfony/filesystem": "^5.0",
