--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require": {
 		"php": "^7.4|^8.0",
-        "illuminate/collections": "8.83.27",
+        "illuminate/collections": "v9.52.16",
 		"league/commonmark": "^1.3|^2.0.2",
         "symfony/finder": "^5.4"
     },
